:bug: Adjust success message on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -577,4 +577,10 @@ html, body {
         display: flex;
         justify-content: center;
     }
+
+    .success {
+        top: 20px;
+        width: 90%;
+        box-sizing: border-box;
+    }
 }
